--- a/react-frontend/sg-frontend/src/css/Login.module.css
+++ b/react-frontend/sg-frontend/src/css/Login.module.css
@@ -54,9 +54,51 @@
     div{
         margin-top: 25px;
     }
-    p{
-         
+}
+
+.signUpWrapper{
+    margin-top: 50px;
+}
+
+.signUpForm {
+    width: 100%;
+    height: 80%;
+    box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    border-radius: 8px;
+    border-radius: 0 0 5px 5px;
+}
+
+.topContainer {
+    background-color: black;
+    width: 100%;
+    height: 70px;
+    border-radius: 5px 5px 0 0;
+}
+
+.topContent {
+    color: white;
+    padding-left: 5%;
+    height: 100%;
+    align-content: center;
+    margin-top: -5%;
+
+    h3 {
+        font-size: 24px;
+        font-weight: 900;
     }
+
+    div {
+        margin-top: 25px;
+    }
+}
+
+.topFormContent {
+    padding-left: 5%;
+    padding-right: 5%;
+    height: 100%;
+    align-content: center;
 }
 
 label {
