--- a/react-frontend/sg-frontend/src/css/Login.module.css
+++ b/react-frontend/sg-frontend/src/css/Login.module.css
@@ -1,113 +1,112 @@
 .authFormContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .authForm {
-    width: 420px;
-    height: 600px;
-    box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    border-radius: 8px;
-    border-radius: 5px 0 0 5px;
+  width: 420px;
+  height: 600px;
+  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  border-radius: 5px 0 0 5px;
 }
 
 .authFormContent {
-    padding-left: 12%;
-    padding-right: 12%;
-    height: 100%;
-    align-content: center;
-    margin-top: -10%;
+  padding-left: 12%;
+  padding-right: 12%;
+  height: 100%;
+  align-content: center;
+  margin-top: -10%;
 }
 
 .authFormTitle {
-    text-align: center;
-    margin-bottom: 1em;
+  text-align: center;
+  margin-bottom: 1em;
+  font-size: 24px;
+  color: rgb(34, 34, 34);
+  font-weight: 800;
+}
+
+.sideContainer {
+  background-color: black;
+  width: 600px;
+  height: 600px;
+  border-radius: 0 5px 5px 0;
+}
+
+.sideContent {
+  color: white;
+  padding-left: 12%;
+  padding-right: 12%;
+  height: 100%;
+  align-content: center;
+  margin-top: -5%;
+  font-family: "Courier New", Courier, monospace;
+  h3 {
     font-size: 24px;
-    color: rgb(34, 34, 34);
-    font-weight: 800;
+    font-weight: 900;
+  }
+  div {
+    margin-top: 25px;
+  }
 }
 
-.sideContainer{
-    background-color: black;
-    width: 600px;
-    height: 600px;
-    border-radius: 0 5px 5px 0;
-}
-
-.sideContent{
-    color: white;
-    padding-left: 12%;
-    padding-right: 12%;
-    height: 100%;
-    align-content: center;
-    margin-top: -5%;
-    font-family: 'Courier New', Courier, monospace;
-    h3{
-        font-size: 24px;
-        font-weight: 900;
-    }
-    div{
-        margin-top: 25px;
-    }
-}
-
-.signUpWrapper{
-    margin-top: 50px;
+.signUpWrapper {
+  margin-top: 50px;
 }
 
 .signUpForm {
-    width: 100%;
-    height: 80%;
-    box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    border-radius: 8px;
-    border-radius: 0 0 5px 5px;
+  width: 100%;
+  height: 80%;
+  box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  border-radius: 8px;
+  border-radius: 0 0 5px 5px;
 }
 
 .topContainer {
-    background-color: black;
-    width: 100%;
-    height: 70px;
-    border-radius: 5px 5px 0 0;
+  background-color: black;
+  width: 100%;
+  height: 70px;
+  border-radius: 5px 5px 0 0;
 }
 
 .topContent {
-    color: white;
-    padding-left: 5%;
-    height: 100%;
-    align-content: center;
-    margin-top: -5%;
+  color: white;
+  padding-left: 5%;
+  height: 100%;
+  align-content: center;
+  margin-top: -5%;
 
-    h3 {
-        font-size: 24px;
-        font-weight: 900;
-    }
+  h3 {
+    font-size: 24px;
+    font-weight: 900;
+  }
 
-    div {
-        margin-top: 25px;
-    }
+  div {
+    margin-top: 25px;
+  }
 }
 
 .topFormContent {
-    padding-left: 5%;
-    padding-right: 5%;
-    height: 100%;
-    align-content: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  height: 100%;
+  align-content: center;
 }
 
 label {
-    font-size: 14px;
-    color: rgb(34, 34, 34);
-    text-align: left !important;
+  font-size: 14px;
+  color: rgb(34, 34, 34);
+  text-align: left !important;
 }
 
 .btnColor {
-    background-color: black;
+  background-color: black;
 }
-
