--- a/sg-frontend/src/css/GroupList.css
+++ b/sg-frontend/src/css/GroupList.css
@@ -42,6 +42,7 @@
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 10px;
+  height: calc(100vh - 250px);
 }
 
 /* Group item styling */
@@ -96,6 +97,7 @@
 /* Join button styling */
 .join-button {
   height: 50px;
+  width: 100px;
   align-self: center;
 }
 
